# repcmd

./: .gitignore  CLAUDE.md  README.md  package.json  pom.xml
etc/: test.json
etc/sample/: .classpath  .project  test.jasper  test.jrxml
java/: pom.xml  release.sh
java/sh/: repcmd.sh
java/src/main/java/jp/infodb/repcmd/: App.java  Report.java
java/src/main/resources/: jasperreports_extension.properties
java/src/main/resources/fonts/: ipaexg.xml
java/src/test/java/jp/infodb/repcmd/: AppTest.java
python/: README.md  pyproject.toml
python/repcmd/: __init__.py  setup.py
src/main/java/jp/infodb/repcmd/: Report.java
