[tool.poetry]
name = "repcmd"
version = "1.1.0"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
license = "MIT"
readme = "README.md"
packages = [
    { include="repcmd", from="." }
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
